feat: 🍱 update image

--- a/nerviosos/assets/Modulo 4/html/figura11.2.html
+++ b/nerviosos/assets/Modulo 4/html/figura11.2.html
@@ -62,8 +62,8 @@
         fusiforme. Su soma (sombreado de verde) posee una forma alargada o
         elipsoidal, mientras su núcleo (sombreado de amarillo), se encuentra en
         la región central con una forma esférica. Por último, en polos opuestos
-        del soma, emergen las proyecciones (sombreado de azul encontraríamos el
-        axón; y de naranja se sombrea las dendritas).
+        del soma, emergen las proyecciones (sombreado de naranja encontraríamos
+        el axón; y de azul se sombrea las dendritas).
       </p>
     </center>
   </body>
