--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
       <div id="bs-navbar" class="navigation d-none d-md-block">
         <!-- Título del sitio -->
         <div class="site-url" id="subdominio">
-          <a href="http://subdominio.unal.edu.co/">subdominio.unal.edu.co</a>
+          <a href="#">Morfología Humana</a>
         </div>
         <!-- Buscador -->
         <div class="buscador" id="buscador">
@@ -290,21 +290,23 @@
         <div class="navbar-dark mainMenu" id="main_menu_container">
           <!-- Items menú principal -->
           <div class="btn-group">
-            <div class="btn btn-default dropdown-toggle" data-toggle="dropdown">
-              Item menu ejemplo 1<span class="caret"></span>
-            </div>
-            <ul class="dropdown-menu">
-              <li>
-                <a class="dropdown-item" href="#">Página 1</a>
-              </li>
-              <li>
-                <a class="dropdown-item" href="#">Página 2</a>
-              </li>
-            </ul>
+            <a href="epiteliales/index.html" class="btn btn-default"
+              >Tejidos epiteliales</a
+            >
           </div>
           <div class="btn-group">
-            <a href="index.html#" class="btn btn-default"
-              >Item menu ejemplo 2</a
+            <a href="conjuntivos/index.html" class="btn btn-default"
+              >Tejidos conjuntivos</a
+            >
+          </div>
+          <div class="btn-group">
+            <a href="./musculares/index.html" class="btn btn-default"
+              >Tejidos musculares</a
+            >
+          </div>
+          <div class="btn-group">
+            <a href="./nerviosos/index.html" class="btn btn-default"
+              >Tejidos nerviosos</a
             >
           </div>
           <!-- Sedes -->
