--- a/musculares/index.html
+++ b/musculares/index.html
@@ -467,10 +467,10 @@
     <main class="detalle">
       <div class="breadcrumb-class">
         Está en:<a href="../index.html" target="_self" title="Inicio">Inicio</a
-        >/<span>Tejidos Conjuntivos</span>
+        >/<span>Tejidos Musculares</span>
       </div>
       <br />
-      <h1>Tejido Muscular</h1>
+      <h1>Tejidos Musculares</h1>
       <br />
       <center>
         <iframe
