--- a/nerviosos/index.html
+++ b/nerviosos/index.html
@@ -466,10 +466,10 @@
     <main class="detalle">
       <div class="breadcrumb-class">
         Está en:<a href="../index.html" target="_self" title="Inicio">Inicio</a
-        >/<span>Tejidos Conjuntivos</span>
+        >/<span>Tejidos Nerviosos</span>
       </div>
       <br />
-      <h1>Tejido Nervioso</h1>
+      <h1>Tejidos Nerviosos</h1>
       <br />
       <center>
         <iframe
