feat: ✨ create home page

--- a/index.html
+++ b/index.html
@@ -608,13 +608,134 @@
 
     <!-- Contenido -->
     <main class="detalle">
-      <h1>Tejidos</h1>
-      <ol>
-        <li><a href="epiteliales/index.html">Tejidos epiteliales</a></li>
-        <li><a href="conjuntivos/index.html">Tejidos conjuntivos</a></li>
-        <li><a href="musculares/index.html">Tejidos musculares</a></li>
-        <li><a href="nerviosos/index.html">Tejidos nervioso</a></li>
-      </ol>
+      <section style="text-align: center; margin-top: 40px">
+        <h1>
+          Diseño de un sitio Web como objeto virtual de aprendizaje para
+          desarrollar competencias sobre los tejidos fundamentales en
+          estudiantes de la Maestría en Morfología Humana
+        </h1>
+        <h3>Autor: Cristian David Benavides Riveros</h3>
+        <h3>Diseño: Josué David Briceño Urquijo</h3>
+      </section>
+      <br />
+      <hr />
+      <article
+        style="
+          font-size: 14pt;
+          line-height: normal;
+          display: flex;
+          gap: 10px;
+          flex-direction: column;
+        "
+      >
+        <p>
+          La Universidad Nacional de Colombia dentro de los programas
+          curriculares de posgrados de la Facultad de Medicina, ofrece la
+          Maestría en Morfología Humana; dirigida a profesionales en el área de
+          ciencias de la salud humana, animal y ciencias biológicas. En términos
+          generales, la maestría permite profundizar conceptos básicos de las
+          ciencias morfológicas como anatomía, histología, embriología, entre
+          otras. Es importante que los estudiantes posean conceptos previos de
+          las ciencias básicas a profundizar.
+        </p>
+        <p>
+          La histología es el estudio científico de las estructuras
+          microscópicas de los tejidos y órganos del cuerpo. Aunque hace parte
+          de las ciencias básicas en el sector salud, su implementación difiere
+          según el pensum de algunos pregrados de ciencias de la salud
+          (Fisioterapia Instrumentación Quirúrgica, Enfermería, entre otras).
+          Este proyecto tiene como objetivo principal ofrecer a los estudiantes
+          de la Maestría en Morfología Humana, principalmente a quienes no tiene
+          bases en este estudio; un apoyo mediante un objeto virtual de
+          aprendizaje (Sitio Web) la cual posea bases teóricas de los tejidos
+          fundamentales generales (tejidos epiteliales, tejido conjuntivo,
+          tejido muscular y tejido nervioso) en donde el estudiante podrá
+          observar láminas histológicas con su respectiva descripción.
+        </p>
+        <p>
+          Las láminas serán seleccionadas según los módulos establecidos, se
+          evaluará su estado, se observará bajo microscopio (Motic BA300), se
+          estandarizará lo más relevante y se tomarán las respectivas imágenes
+          con una cámara fotográfica (Moticam 2500 de 5.0 Mpx) finalmente
+          mediante un programa de edición (Adobe Photoshop CS6) se resaltarán
+          los aspectos importantes y claves para que el estudiante comprenda la
+          descripción de las láminas histológicas.
+        </p>
+      </article>
+      <br />
+      <hr />
+      <h2>Contenido</h2>
+      <ul class="listaTarjetas">
+        <li>
+          <a href="epiteliales/index.html">
+            <div class="tarjeta">
+              <div>
+                <img
+                  src="./epiteliales/assets/Modulo 1/images/figura7.1.jpg"
+                  alt="Tejidos epiteliales"
+                />
+              </div>
+              <div class="footer"><label>Tejidos epiteliales</label></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="conjuntivos/index.html">
+            <div class="tarjeta">
+              <div>
+                <img
+                  src="./conjuntivos/assets/Modulo 2/images/figura7.jpg"
+                  alt="Tejidos conjuntivos"
+                />
+              </div>
+              <div class="footer"><label>Tejidos conjuntivos</label></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="musculares/index.html">
+            <div class="tarjeta">
+              <div>
+                <img
+                  src="./musculares/assets/Modulo 3/images/figura1.jpg"
+                  alt="Tejidos musculares"
+                />
+              </div>
+              <div class="footer"><label>Tejidos musculares</label></div>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="nerviosos/index.html">
+            <div class="tarjeta">
+              <div>
+                <img
+                  src="./nerviosos/assets/Modulo 4/images/figura3.jpg"
+                  alt="Tejidos nervioso"
+                />
+              </div>
+              <div class="footer"><label>Tejidos nervioso</label></div>
+            </div>
+          </a>
+        </li>
+      </ul>
+      <br />
+      <hr />
+      <h2>Contacto</h2>
+      <br />
+      <ul>
+        <li>
+          <h4>Cristian David Benavides Riveros</h4>
+          <h5>Autor</h5>
+          <p>Correo: crbenavidesr@unal.edu.co</p>
+        </li>
+        <br />
+        <li>
+          <h4>Josué David Briceño Urquijo</h4>
+          <h5>Diseñador</h5>
+          <p>Correo: jbriceno@unal.edu.co</p>
+        </li>
+      </ul>
     </main>
 
     <!-- Footer -->
