feat: ✨ update contact info

--- a/index.html
+++ b/index.html
@@ -773,11 +773,9 @@
           <a href="http://correo.unal.edu.co" target="_top"
             >Correo institucional</a
           >
-          <a href="index.html#">Mapa del sitio</a>
           <a href="http://redessociales.unal.edu.co" target="_top"
             >Redes Sociales</a
           >
-          <a href="index.html#">FAQ</a>
           <a href="http://unal.edu.co/quejas-y-reclamos/" target="_self"
             >Quejas y reclamos</a
           >
@@ -785,31 +783,26 @@
             >Atención en línea</a
           >
           <a href="http://unal.edu.co/encuesta/" target="_self">Encuesta</a>
-          <a href="index.html#">Contáctenos</a>
           <a href="http://estadisticas.unal.edu.co/" target="_top"
             >Estadísticas</a
           >
-          <a href="index.html#">Glosario</a>
         </nav>
         <div class="col-lg-4 col-md-4 col-sm-4 col-12 footer-info">
           <div class="row footer-info-spacing">
             <p class="col-lg-6 col-md-12 col-sm-12 col-6 contacto">
               <b>Contacto página web:</b><br />
-              Dirección ...<br />
-              Edificio ...<br />
-              Bogotá D.C., Colombia<br />
-              (+57 1) 316 5000 Ext.
+              jbriceno@unal.edu.co<br />
             </p>
             <p class="col-lg-6 col-md-12 col-sm-12 col-6 derechos">
-              &copy; Copyright 2019<br />
+              &copy; Copyright 2023<br />
               Algunos derechos reservados.<br />
               <a
                 title="Comuníquese con el administrador de este sitio web"
-                href="mailto:EMAIL@unal.edu.co"
-                >EMAIL@unal.edu.co</a
+                href="mailto:jbriceno@unal.edu.co"
+                >jbriceno@unal.edu.co</a
               ><br />
-              <a href="index.html#">Acerca de este sitio web</a><br />
-              Actualización:14/11/19
+              <br />
+              Actualización: 12/11/2023
             </p>
           </div>
         </div>
