--- a/nerviosos/index.html
+++ b/nerviosos/index.html
@@ -483,14 +483,14 @@
     </main>
 
     <footer class="clear">
-      <nav class="col-md-3 col-lg-3 col-sm-3 col-xs-4 col-xxs-6 gobiernoLinea">
+      <nav class="col-lg-3 col-md-3 col-sm-4 col-6 gobiernoLinea">
         <a href="http://www.legal.unal.edu.co" target="_top">Régimen Legal</a>
         <a href="http://personal.unal.edu.co" target="_top">Talento humano</a>
         <a href="http://contratacion.unal.edu.co" target="_top">Contratación</a>
         <a href="http://personal.unal.edu.co" target="_top"
           >Ofertas de empleo</a
         >
-        <a href="http://rendiciondecuentas.unal.edu.co/" target="_top"
+        <a href="http://launalcuenta.unal.edu.co/" target="_top"
           >Rendición de cuentas</a
         >
         <a href="http://docentes.unal.edu.co/concurso-profesoral/" target="_top"
@@ -507,15 +507,13 @@
           >Buzón de notificaciones</a
         >
       </nav>
-      <nav class="col-md-3 col-lg-3 col-sm-3 col-xs-4 col-xxs-6 gobiernoLinea">
+      <nav class="col-lg-3 col-md-3 col-sm-4 col-6 gobiernoLinea">
         <a href="http://correo.unal.edu.co" target="_top"
           >Correo institucional</a
         >
-        <a href="index.html#">Mapa del sitio</a>
         <a href="http://redessociales.unal.edu.co" target="_top"
           >Redes Sociales</a
         >
-        <a href="index.html#">FAQ</a>
         <a href="http://unal.edu.co/quejas-y-reclamos/" target="_self"
           >Quejas y reclamos</a
         >
@@ -523,28 +521,26 @@
           >Atención en línea</a
         >
         <a href="http://unal.edu.co/encuesta/" target="_self">Encuesta</a>
-        <a href="index.html#">Contáctenos</a>
-        <a href="http://www.onp.unal.edu.co" target="_top">Estadísticas</a>
-        <a href="index.html#">Glosario</a>
+        <a href="http://estadisticas.unal.edu.co/" target="_top"
+          >Estadísticas</a
+        >
       </nav>
       <div class="col-md-4 col-lg-4 col-sm-4 col-xs-4 col-xxs-12 footer-info">
-        <p class="col-sm-12 col-md-6 contacto">
+        <p class="col-lg-6 col-md-12 col-sm-12 col-6 contacto">
           <b>Contacto página web:</b><br />
-          Dirección .....<br />
-          Edificio ...<br />
-          Bogotá D.C., Colombia<br />
-          (+57 1) 316 5000 Ext.
+          jbriceno@unal.edu.co<br />
+          <br /><br /><br />
         </p>
-        <p class="col-sm-12 col-md-6 derechos">
-          &copy; Copyright 2014<br />
+        <p class="col-lg-6 col-md-12 col-sm-12 col-6 derechos">
+          &copy; Copyright 2023<br />
           Algunos derechos reservados.<br />
           <a
             title="Comuníquese con el administrador de este sitio web"
-            href="mailto:EMAIL@unal.edu.co"
-            >EMAIL@unal.edu.co</a
+            href="mailto:jbriceno@unal.edu.co"
+            >jbriceno@unal.edu.co</a
           ><br />
-          <a href="index.html#">Acerca de este sitio web</a><br />
-          Actualización:31/05/16
+          <br />
+          Actualización: 12/11/2023
         </p>
       </div>
 
