feat: ✨ add button for returning home

--- a/nerviosos/index.html
+++ b/nerviosos/index.html
@@ -479,6 +479,10 @@
           style="width: 1000px; height: 500px"
         >
         </iframe>
+        <br /><br />
+        <a href="../index.html" class="btn btn-primary"
+          >Regresar al menú prinicipal</a
+        >
       </center>
     </main>
 
