--- a/musculares/index.html
+++ b/musculares/index.html
@@ -480,6 +480,10 @@
           style="width: 1000px; height: 500px"
         >
         </iframe>
+        <br /><br />
+        <a href="../index.html" class="btn btn-primary"
+          >Regresar al menú prinicipal</a
+        >
       </center>
     </main>
 
